Fix commented out tests.